<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:padding="16dp">

    <Button
        android:id="@+id/sortNameAscButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_name_asc" />

    <Button
        android:id="@+id/sortNameDescButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_name_desc" />

    <Button
        android:id="@+id/sortQuantityAscButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_quantity_asc" />

    <Button
        android:id="@+id/sortQuantityDescButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_quantity_desc" />

</LinearLayout>