<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:padding="32dp">

    <TextView
        android:id="@+id/popupItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:textStyle="bold"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/popupItemQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity_label"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/popupItemDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_description"
        android:textSize="32sp" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_item"
        android:textSize="32sp" />
</LinearLayout>